robotic-codes/src/test/test_hexb.txt
test_hexb.cpp: In function ‘int main()’:
test_hexb.cpp:11:14: error: invalid initialization of reference of type ‘std::ios_base&’ from expression of type ‘uint {aka unsigned int}’
   num = hex(x);
              ^
In file included from /usr/include/c++/7/ios:42:0,
                 from /usr/include/c++/7/ostream:38,
                 from /usr/include/c++/7/iostream:39,
                 from test_hexb.cpp:1:
/usr/include/c++/7/bits/ios_base.h:1024:3: note: in passing argument 1 of ‘std::ios_base& std::hex(std::ios_base&)’
   hex(ios_base& __base)
   ^~~
